--- a/public/style.css
+++ b/public/style.css
@@ -34,3 +34,13 @@
     text-align: center;
     font-weight: bold;
 }
+
+.users{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 1rem;
+}
+.user{
+    background-color: antiquewhite;
+    padding: 0.rem;
+}
